[tool:pytest]
testpaths =
    mint/
addopts =
    -ra
    -v


[metadata]
name = python-mint
version = file: version.txt
author = Alexander Pletzer
author_email = alexander.pletzer@nesi.org.nz
url = https://github.com/pletzer/mint
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: C++
    Programming Language :: Fortran
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Atmospheric Science
license = Zero-Clause BSD
license_file = LICENSE.txt
description = Mimetic INTerpolation on the Sphere
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    code = https://github.com/pletzer/mint
    issues = https://github.com/pletzer/mint/issues
keywords =
    mimetic
    regrid
    interpolate
    sphere


[options]
include_package_data = True
install_requires =
    netCDF4
    numpy
    iris
    tbb
    vtk >= 9.0.1
package_dir =
    mint=mint
packages = find:
python_requires = >3.6
setup_requires =
    Cython
    setuptools >= 40.8.0
    wheel
    netCDF4
    vtk >= 9.0.1
tests_require =
    pytest
zip_safe = False
